# project1_Nosulchak_Elena_dpo_nod

./: .gitignore  Makefile  README.md  main.py  main.ry  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
