[tool.poetry]
name = "project1-nosulchak-elena-dpo-nod"
version = "0.1.0"
description = "Простейшая игра Labyrinth"
authors = ["Elena Nosulchak <you@example.com>"
]

packages = [{include = "labyrinth_game"}]
[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




