[tool.poetry]
name = "project1-nosulchak-elena-dpo-nod"
version = "0.1.0"
description = "Простейшая игра Labyrinth"
authors = ["Elena Nosulchak <you@example.com>"
]

packages = [{include = "labyrinth_game"}]
[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
